# architect

./: .dockerignore  .gitignore  CLAUDE.md  README.md  mkdocs.yml
services/backend/: Dockerfile  pyproject.toml  requirements.txt
services/backend/src/: config.py  database.py  main.py
services/backend/src/api/: adrs.py  artifacts.py  chat.py  clients.py  coverage.py  inventory.py  knowledge.py  projects.py  questions.py  rendering.py  templates.py  uploads.py  versions.py
services/backend/src/models/: __init__.py  adr.py  artifact.py  base.py  client.py  coverage.py  inventory_item.py  knowledge_embedding.py  project.py  question.py  upload.py  version.py
services/backend/src/rendering/: __init__.py  base.py  d2_renderer.py  diagrams_renderer.py  markdown_renderer.py  pdf_renderer.py
services/backend/src/schemas/: __init__.py  adr.py  artifact.py  client.py  inventory_item.py  project.py  question.py  upload.py  version.py
services/backend/src/services/: chat_service.py  embedding_service.py  knowledge_parser.py  render_service.py  slug.py  template_service.py
services/backend/src/templates/: architecture.md.j2  runbook.md.j2
services/backend/src/templates/pdf/: report.html.j2
services/backend/tests/: conftest.py  test_adrs.py  test_artifacts.py  test_clients.py  test_clone_artifacts.py  test_d2_renderer.py  test_health.py  test_knowledge_parser.py  test_knowledge_search.py  test_markdown_renderer.py  test_pdf_renderer.py  test_private_cloud_icons.py  test_projects.py  test_questions.py  test_rendering.py  test_vendor_fetcher.py  test_versions.py
(+503 files in other folders)
