[project]
name = "architect-backend"
version = "0.1.0"
description = "Cloud architecture design tool — backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.34.0",
    "asyncpg~=0.30.0",
    "sqlalchemy[asyncio]~=2.0.0",
    "alembic~=1.14.0",
    "pydantic~=2.10.0",
    "pydantic-settings~=2.7.0",
    "structlog~=24.4.0",
    "jinja2~=3.1.0",
    "markdown~=3.7",
    "pymdown-extensions~=10.14",
    "weasyprint~=63.0",
    "diagrams~=0.24.0",
    "httpx~=0.28.0",
    "cairosvg~=2.7.0",
    "pgvector~=0.3.0",
    "sentence-transformers~=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.25.0",
    "pytest-cov~=6.0.0",
    "httpx~=0.28.0",
    "ruff~=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"
